# buba-Test

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs
src-tauri/src/analyzer/: architecture.rs  file_scanner.rs  mod.rs  parser.rs  static_rules.rs
src-tauri/src/opencode/: runner.rs
src-tauri/src/patcher/: mod.rs
src/components/: ArchitectureView.tsx  BugPanel.tsx  CodeViewer.tsx  Dashboard.tsx  ErrorBoundary.tsx  FileTree.tsx  SeverityBadge.tsx  TestOutput.tsx
src/hooks/: useFileTree.ts
src/store/: projectStore.ts
