[package]
name = "javalens"
version = "0.1.0"
description = "Java/Spring Boot Static Analyzer"
edition = "2021"

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
regex = "1.10"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
futures = "0.3"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
